--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,11 @@ on:
   push:
     branches:
       - master
+
+env:
+  AZURE_WEBAPP_NAME: zm22api
+  AZURE_WEBAPP_PACKAGE_PATH: "./publish"
+  
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -24,4 +29,11 @@ jobs:
         run: dotnet build ./TimeService.sln --configuration Release --no-restore
 
       - name: Publish
-        run: dotnet publish ./TimeService.sln --configuration Release --no-build
+        run: dotnet publish ./TimeService.sln --configuration Release --no-build --output '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}'
+        
+      - name: Deployment
+        uses: actions/webapps-deploy@v2
+        with:
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
+          package: "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
