--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,10 @@
-name: Publish 🚀
+name: Release
 
 on:
   workflow_dispatch:
   push:
     branches:
-      - master
+      - develop
 
 env:
   AZURE_WEBAPP_NAME: zm22api
