--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ env:
   AZURE_WEBAPP_PACKAGE_PATH: "./publish"
   
 jobs:
-  publish:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -29,7 +29,7 @@ jobs:
         run: dotnet build ./TimeService.sln --configuration Release --no-restore
 
       - name: Setup App Version
-        uses: azure/powershell@v1
+        uses: actions/PowerShell@2
         with:
             inlineScript: |
                 [Reflection.Assembly]::LoadWithPartialName("System.Xml.Linq")
