--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
         shell: pwsh
         run: |
                 [Reflection.Assembly]::LoadWithPartialName("System.Xml.Linq")
-                $path = "./TimeService/TimeService.API/TimeService.API.csproj"
+                $path = "./TimeService.API/TimeService.API.csproj"
                 $doc = [System.Xml.Linq.XDocument]::Load($path)
                 $doc
                     .Element("Project")
