--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,7 @@ jobs:
                 [Reflection.Assembly]::LoadWithPartialName("System.Xml.Linq")
                 $path = "./TimeService.API/TimeService.API.csproj"
                 $doc = [System.Xml.Linq.XDocument]::Load($path)
+                echo {{ $doc }}
                 $doc
                     .Element("Project Sdk="Microsoft.NET.Sdk.Web")
                     .Element("PropertyGroup")
