--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ env:
   major: 1
   minor: 0
   patch: $[counter(variables['major'], 0)]
-  build: $(Build.BuildId)
+  build: $(Build.SourceVersion)
   
 jobs:
   build:
