--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,16 +6,41 @@ on:
     branches:
       - develop
 
-env:
-  AZURE_WEBAPP_NAME: zm22api
-  AZURE_WEBAPP_PACKAGE_PATH: "./publish"
-  
+permissions:
+      id-token: write
+      contents: write
+
 jobs:
   publish:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+  
+      - name: Change App Version
+        shell: pwsh
+        run: |
+                [Reflection.Assembly]::LoadWithPartialName("System.Xml.Linq")
+                $path = "./TimeService.API/TimeService.API.csproj"
+                $doc = [System.Xml.Linq.XDocument]::Load($path)
+                $buildval = $major = $doc.Element("Project").Element("PropertyGroup").Element("Version").Value
+                $major = $doc.Element("Project").Element("PropertyGroup").Element("Version").Value.Split(".")[0]
+                $minor = $doc.Element("Project").Element("PropertyGroup").Element("Version").Value.Split(".")[1]
+                $patch = $doc.Element("Project").Element("PropertyGroup").Element("Version").Value.Split(".")[2]
+                echo "Build value is: $buildval"
+                echo "Part 1: $major"
+                echo "Part 2: $minor"
+                echo "Part 3: $patch"
+                $doc.Element("Project").Element("PropertyGroup").Element("Version").SetValue("$major.$minor.$patch.${{ github.run_number }}")
+                $doc.Save($path)
+
+      - run: |
+          # Note: the following account information will not work on GHES
+          git config user.name "nayankhare"
+          git config user.email "nayan.khare@gmail.com"
+          git add .
+          git commit -m "CSPROJ updated"
+          git push
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
@@ -27,17 +52,3 @@ jobs:
 
       - name: Build
         run: dotnet build ./TimeService.sln --configuration Release --no-restore
-
-      - name: Setup App Version
-        uses: powershell@2
-        with:
-            inlineScript: |
-                [Reflection.Assembly]::LoadWithPartialName("System.Xml.Linq")
-                $path = "./TimeService/TimeService.API/TimeService.API.csproj"
-                $doc = [System.Xml.Linq.XDocument]::Load($path)
-                $doc
-                    .Element("Project")
-                    .Element("PropertyGroup")
-                    .Element("Version")
-                    .SetValue("$(major).$(minor).$(patch).$(build)");
-                $doc.Save($path)
