--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,9 +37,22 @@ jobs:
           # Note: the following account information will not work on GHES
           git config user.name "nayankhare"
           git config user.email "nayan.khare@gmail.com"
-          git add .
-          git commit -m "CSPROJ updated"
-          git push
+
+          timestamp=$(date +'%Y%m%d%H%M%S')
+          branch_name="ts-$timestamp"
+
+          git checkout -b "$branch_name"
+
+          git add "./TimeService.API/TimeService.API.csproj"
+          git commit -m "Update CSProj file"
+          git push origin "$branch_name"
+
+          git checkout -b develop
+          git merge --no-ff "$branch_name"
+          git push origin develop
+
+          git branch -d "$branch_name"
+          git push origin --delete "$branch_name"
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
